Talents in unit view

--- a/templates/404_error.html
+++ b/templates/404_error.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<p>404 error :( sum ting wen wong</p>
+<h2>Error :(</h2>
+<br>
+<p>{{exception}}</p>
 {% endblock %}
