Search Bar + Trueform Info + Bug Fixes

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>epic homely home</h1>
+<h2>Battlecats DB</h2>
+<br>
+<p>Click '<a href="/units">UNITS</a>' on the taskbar to view units from the game 'Battle Cats'</p>
 {% endblock %}
