--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="/static\unpkg.com_htmx.org@1.9.6_dist_htmx.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
         <title>{{title}}</title>
     </head>
     <body>
